<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_service_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.beast.justdriving.ServiceView">

    <TextView
        android:text="@string/title"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/title" />

    <TextView
        android:text="@string/title1"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/title"
        android:id="@+id/userTitle" />

    <TextView
        android:text="@string/date"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_alignParentStart="true"
        android:id="@+id/date" />

    <TextView
        android:text="@string/date1"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userTitle"
        android:layout_toEndOf="@+id/date"
        android:id="@+id/userDate" />

    <TextView
        android:text="@string/type"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date"
        android:layout_alignParentStart="true"
        android:id="@+id/type" />

    <TextView
        android:text="@string/oil_change"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userDate"
        android:layout_toEndOf="@+id/type"
        android:id="@+id/userType" />

    <TextView
        android:text="@string/currentKM"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/type"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:id="@+id/currentKM" />

    <TextView
        android:text="50000"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userType"
        android:layout_toEndOf="@+id/currentKM"
        android:id="@+id/userKM" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/maintenance"
        android:layout_alignParentStart="true"
        android:id="@+id/imageView"
        android:layout_below="@+id/currentKM" />


</RelativeLayout>
