<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_service"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.beast.justdriving.AddService">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/title"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/addTitle" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:inputType="date"
        android:ems="10"
        android:layout_below="@+id/addTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/addDate"/>

    <AutoCompleteTextView
        android:text="@string/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addDate"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/addType"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/currentKM"
        android:ems="10"
        android:layout_below="@+id/addType"
        android:layout_alignParentStart="true"
        android:id="@+id/addCurKM"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="Click to add a photo"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/photo"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="140dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/camera"
        android:alpha="0.34"
        android:elevation="0dp"
        android:cropToPadding="false"
        android:adjustViewBounds="false"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="save"
        android:layout_below="@+id/addCurKM"
        android:id="@+id/addPhoto"/>


</RelativeLayout>
